unpackaged/main/default/objects/TablaDescenso__c/TablaDescenso__c.object-meta.xml
<CustomObject>
    <label>Tabla descenso</label>
    <nameField>
        <label>Fraccionamiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabla descenso</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>