unpackaged/main/default/objects/TablaDescenso__c/fields/Abr__c.field-meta.xml
<CustomField>
    <fullName>Abr__c</fullName>
    <label>Abr</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>