unpackaged/main/default/objects/TablaDescenso__c/fields/Ago__c.field-meta.xml
<CustomField>
    <fullName>Ago__c</fullName>
    <label>Ago</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>