unpackaged/main/default/objects/TablaDescenso__c/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <label>Asesor</label>
    <length>60</length>
    <type>Text</type>
</CustomField>