unpackaged/main/default/objects/TablaDescenso__c/fields/CantidadAsesores__c.field-meta.xml
<CustomField>
    <fullName>CantidadAsesores__c</fullName>
    <label>Cantidad de asesores</label>
    <length>60</length>
    <type>Text</type>
</CustomField>