unpackaged/main/default/objects/TablaDescenso__c/fields/Dic__c.field-meta.xml
<CustomField>
    <fullName>Dic__c</fullName>
    <label>Dic</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>