unpackaged/main/default/objects/TablaDescenso__c/fields/Ene__c.field-meta.xml
<CustomField>
    <fullName>Ene__c</fullName>
    <label>Ene</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>