unpackaged/main/default/objects/TablaDescenso__c/fields/Feb__c.field-meta.xml
<CustomField>
    <fullName>Feb__c</fullName>
    <label>Feb</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>