unpackaged/main/default/objects/TablaDescenso__c/fields/IdPeriodo__c.field-meta.xml
<CustomField>
    <fullName>IdPeriodo__c</fullName>
    <label>Id Periodo</label>
    <length>60</length>
    <type>Text</type>
</CustomField>