unpackaged/main/default/objects/TablaDescenso__c/fields/Jul__c.field-meta.xml
<CustomField>
    <fullName>Jul__c</fullName>
    <label>Jul</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>