unpackaged/main/default/objects/TablaDescenso__c/fields/Jun__c.field-meta.xml
<CustomField>
    <fullName>Jun__c</fullName>
    <label>Jun</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>