unpackaged/main/default/objects/TablaDescenso__c/fields/Mar__c.field-meta.xml
<CustomField>
    <fullName>Mar__c</fullName>
    <label>Mar</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>