unpackaged/main/default/objects/TablaDescenso__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <label>Meta</label>
    <length>60</length>
    <type>Text</type>
</CustomField>