unpackaged/main/default/objects/TablaDescenso__c/fields/Nov__c.field-meta.xml
<CustomField>
    <fullName>Nov__c</fullName>
    <label>Nov</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>