unpackaged/main/default/objects/TablaDescenso__c/fields/Promedio__c.field-meta.xml
<CustomField>
    <fullName>Promedio__c</fullName>
    <label>Promedio</label>
    <length>60</length>
    <type>Text</type>
</CustomField>