unpackaged/main/default/objects/TablaDescenso__c/fields/PromedioAnualEscrituras__c.field-meta.xml
<CustomField>
    <fullName>PromedioAnualEscrituras__c</fullName>
    <label>Promedio anual de escrituras</label>
    <length>60</length>
    <type>Text</type>
</CustomField>