unpackaged/main/default/objects/TablaDescenso__c/fields/PromedioRequerido__c.field-meta.xml
<CustomField>
    <fullName>PromedioRequerido__c</fullName>
    <label>Promedio requerido</label>
    <length>60</length>
    <type>Text</type>
</CustomField>