unpackaged/main/default/objects/TablaDescenso__c/fields/ResultadoAnual__c.field-meta.xml
<CustomField>
    <fullName>ResultadoAnual__c</fullName>
    <label>Resultado Anual</label>
    <length>60</length>
    <type>Text</type>
</CustomField>