unpackaged/main/default/objects/TablaDescenso__c/fields/ResultadoMensual__c.field-meta.xml
<CustomField>
    <fullName>ResultadoMensual__c</fullName>
    <label>Resultado mensual</label>
    <length>60</length>
    <type>Text</type>
</CustomField>