unpackaged/main/default/objects/TablaDescenso__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <length>60</length>
    <type>Text</type>
</CustomField>